--- a/public/index.html
+++ b/public/index.html
@@ -51,18 +51,17 @@
         <div class="p-4 bg-dark bg-opacity-75 rounded-3 shadow-lg">
           <pre class="mb-0"><code class="language-javascript">import { getProfile } from "https://aipipe.org/aipipe.js";
 
-const { token } = getProfile();
-const response = await fetch(
-  "https://aipipe.org/openrouter/v1/chat/completions",
-  {
-    method: "POST",
-    headers: { Authorization: `Bearer ${token}` },
-    body: JSON.stringify({
-      "model": "openai/gpt-4o-mini",
-      "messages": [{ "role": "user", "content": "What is 2 + 2?" }]
-    })
-  }
-).then(r => r.json());
+const { token, email } = getProfile();
+if (!token) window.location = `https://aipipe.org/login?redirect=${window.location.href}`;
+
+const response = await fetch("https://aipipe.org/openrouter/v1/chat/completions", {
+  method: "POST",
+  headers: { Authorization: `Bearer ${token}`, "Content-Type": "application/json" },
+  body: JSON.stringify({
+    "model": "openai/gpt-4o-mini",
+    "messages": [{ "role": "user", "content": "What is 2 + 2?" }]
+  })
+}).then(r => r.json());
 </code></pre>
         </div>
       </div>
